fixed signup text color

--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -34,7 +34,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Stay Connected"
-            android:textColor="@color/colorPrimaryText" />
+            android:textColor="@color/colorPrimary" />
 
         <TextView
             style="@style/TextAppearance.AppCompat.Body1"
@@ -43,7 +43,7 @@
             android:layout_marginTop="8dp"
             android:maxEms="20"
             android:text="Enter your email address and password\nto get access to your account"
-            android:textColor="@color/colorPrimaryText" />
+            android:textColor="@color/colorPrimary" />
 
         <EditText
             android:id="@+id/etEmailAddress"
